Fix on-screen keyboard issue when search box is focused

Background:
In some devices like nocturne, on-screen keyboard pops up when launcher
is focused. When launcher is focused, search box textfield will be the
initial focused view. SearchBoxViewBase::ContentsChanged() gets called
to activate the search box, which triggers the on-screen keyboard.

Change:
Avoid activate the search box when new contents are empty string.

Bug: 895249
Change-Id: I32b0f5a76037b5287d1b179fa20140101ce4f853
Reviewed-on: https://chromium-review.googlesource.com/c/1284754
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#600577}(cherry picked from commit 2a98266468990b98020afe7139c7739d6f2d6430 [formerly 65827fc5fd5431bba046c01fd7102d563bb65d71])
Reviewed-on: https://chromium-review.googlesource.com/c/1290189
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/branch-heads/3578@{#138}
Cr-Branched-From: abbd18012032883c3113b3bfc5d59d25b4836c5f [formerly 4226ddf99103e493d7afb23a4c7902ee496108b6]-refs/heads/master@{#599034}
Former-commit-id: 9bae74eaef4613ceb3880e4b8a5a5a0f8b4eadb1